--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
