--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
