--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_PUBLIC_DATABASE_URL=https://c20-15-m-nest-react.onrender.com
-# VITE_PUBLIC_DATABASE_URL=http://localhost:4000
+# VITE_PUBLIC_DATABASE_URL=https://c20-15-m-nest-react.onrender.com
+VITE_PUBLIC_DATABASE_URL=http://localhost:4000
 
